--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -13,8 +13,7 @@ smallvec = "*"
 cstr = "*"
 cgmath = "*"
 
-gl_loader = "0.1"
-gl = "0.14"
+glow = "*"
 glutin = "0.30"
 glutin-winit = "0.3"
 raw-window-handle = "0.5"
