Clippy and other minor fixes.

--- a/dear_imgui/Cargo.toml
+++ b/dear_imgui/Cargo.toml
@@ -10,6 +10,7 @@ dear_imgui-sys = { path = "../dear_imgui-sys" }
 paste = "*"
 bitflags = "*"
 cstr = "*"
+mint = "*"
 
 [features]
 freetype = ["dear_imgui-sys/freetype"]
