--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -4,9 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-dear_imgui-sys = { path = "../dear_imgui-sys", features = ["freetype"] }
-dear_imgui = { path = "../dear_imgui", features = ["freetype"] }
-dear_imgui_renderer = { path = "../dear_imgui_renderer" }
+#dear_imgui-sys = { path = "../dear_imgui-sys", features = ["freetype"] }
+#dear_imgui = { path = "../dear_imgui", features = ["freetype"] }
+#dear_imgui_renderer = { path = "../dear_imgui_renderer" }
+dear_imgui_window = { path = "../dear_imgui_window" }
 
 anyhow = "*"
 smallvec = "*"
