--- a/gamepad/Cargo.toml
+++ b/gamepad/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 dear_imgui-sys = { path = "../dear_imgui-sys" }
 dear_imgui = { path = "../dear_imgui" }
 dear_imgui_renderer = { path = "../dear_imgui_renderer" }
+dear_imgui_window = { path = "../dear_imgui_window" }
 
 glow = "*"
 glutin = "*"
