--- a/easy-imgui-window/Cargo.toml
+++ b/easy-imgui-window/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "dear_imgui_window"
+name = "easy-imgui-window"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,9 +8,9 @@ default = ["clipboard"]
 clipboard = ["dep:arboard"]
 
 [dependencies]
-dear_imgui-sys = { path = "../dear_imgui-sys" }
-dear_imgui = { path = "../dear_imgui" }
-dear_imgui_renderer = { path = "../dear_imgui_renderer" }
+easy-imgui-sys = { path = "../easy-imgui-sys" }
+easy-imgui = { path = "../easy-imgui" }
+easy-imgui-renderer = { path = "../easy-imgui-renderer" }
 
 anyhow = "1"
 
@@ -20,3 +20,8 @@ glutin-winit = "0.3"
 raw-window-handle = "0.5"
 arboard = { version = "3", optional = true, default_features = false }
 winit = { version = "0.28", features = ["x11", "mint"] }
+
+[dev-dependencies]
+cstr = "*"
+image = "*"
+gilrs = "*"
