--- a/easy-imgui/Cargo.toml
+++ b/easy-imgui/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "dear_imgui"
+name = "easy-imgui"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dear_imgui-sys = { path = "../dear_imgui-sys" }
+easy-imgui-sys = { path = "../easy-imgui-sys" }
 paste = "1"
 bitflags = "2"
 cstr = "0.2"
@@ -14,4 +14,4 @@ mint = "0.5"
 image = { version = "0.24", default_features = false }
 
 [features]
-freetype = ["dear_imgui-sys/freetype"]
+freetype = ["easy-imgui-sys/freetype"]
