Move examples to the main crate.

--- a/easy-imgui/Cargo.toml
+++ b/easy-imgui/Cargo.toml
@@ -3,8 +3,6 @@ name = "easy-imgui"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 easy-imgui-sys = { path = "../easy-imgui-sys" }
 paste = "1"
@@ -15,3 +13,9 @@ image = { version = "0.24", default_features = false }
 
 [features]
 freetype = ["easy-imgui-sys/freetype"]
+
+# For the examples
+[dev-dependencies]
+gilrs = "0.10"
+easy-imgui-window = { version="*", path="../easy-imgui-window" }
+anyhow = "1"
