Switch `Vector2` to the `cgmath` implementation.
Why write a 2D type when one better alreay exists?

--- a/easy-imgui/Cargo.toml
+++ b/easy-imgui/Cargo.toml
@@ -9,6 +9,7 @@ paste = "1"
 bitflags = "2"
 cstr = "0.2"
 mint = "0.5"
+cgmath = { version = "0.18", features = ["mint"] }
 image = { version = "0.24", default_features = false }
 
 [features]
