Update */Cargo.toml to comply with crates.io.

--- a/easy-imgui-sys/Cargo.toml
+++ b/easy-imgui-sys/Cargo.toml
@@ -1,11 +1,15 @@
 [package]
 name = "easy-imgui-sys"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 build = "build.rs"
 links = "imgui"
 description = "Low level bindings for the Dear ImGui C++ library"
 license = "MIT"
+readme = "../README.md"
+repository = "https://github.com/rodrigorc/easy-imgui-rs"
+categories = ["gui"]
+keywords = ["imgui", "ui", "graphics"]
 
 [build-dependencies]
 bindgen = "0.69"
