--- a/easy-imgui-renderer/Cargo.toml
+++ b/easy-imgui-renderer/Cargo.toml
@@ -1,15 +1,19 @@
 [package]
 name = "easy-imgui-renderer"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 description = "Default renderer for the easy-imgui crate, using OpenGl via glow"
 license = "MIT"
+readme = "../README.md"
+repository = "https://github.com/rodrigorc/easy-imgui-rs"
+categories = ["gui"]
+keywords = ["imgui", "ui", "graphics"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-easy-imgui-sys = "=0.1.0"
-easy-imgui = "=0.1.0"
+easy-imgui-sys = "=0.1.1"
+easy-imgui = "=0.1.1"
 
 anyhow = "1"
 cgmath = "0.18"
