--- a/easy-imgui-window/Cargo.toml
+++ b/easy-imgui-window/Cargo.toml
@@ -26,3 +26,10 @@ glutin-winit = "0.4"
 raw-window-handle = "0.5"
 arboard = { version = "3", optional = true, default_features = false }
 winit = { version = "0.29", features = ["x11", "mint"] }
+
+# For the examples
+[dev-dependencies]
+gilrs = "0.10"
+anyhow = "1"
+image = { version = "0.24" }
+cstr = "0.2"
