--- a/easy-imgui-window/Cargo.toml
+++ b/easy-imgui-window/Cargo.toml
@@ -10,9 +10,10 @@ categories = ["gui"]
 keywords = ["imgui", "ui", "graphics"]
 
 [features]
-default = ["clipboard"]
+default = ["clipboard", "main-window"]
 clipboard = ["dep:arboard"]
 freetype = ["easy-imgui/freetype"]
+main-window = ["dep:glutin-winit"]
 
 # This is not really needed except for the examples/demo
 # docking = ["easy-imgui/docking"]
@@ -25,7 +26,7 @@ easy-imgui-renderer = { version = "=0.2.3", path = "../easy-imgui-renderer" }
 anyhow = "1"
 
 glutin = "0.31"
-glutin-winit = "0.4"
+glutin-winit = { version = "0.4", optional = true }
 raw-window-handle = "0.5"
 arboard = { version = "3", optional = true, default_features = false }
 winit = { version = "0.29", features = ["x11", "mint"] }
@@ -37,3 +38,4 @@ anyhow = "1"
 image = { version = "0.24" }
 cstr = "0.2"
 game-loop = { version = "1", features = ["winit"] }
+
