--- a/easy-imgui-window/Cargo.toml
+++ b/easy-imgui-window/Cargo.toml
@@ -34,9 +34,10 @@ winit = { version = "0.29", features = ["x11", "mint"] }
 
 # For the examples
 [dev-dependencies]
+simple_logger = "5.0.0"
 gilrs = "0.10"
 anyhow = "1"
 image = { version = "0.24" }
 cstr = "0.2"
-game-loop = { version = "1", features = ["winit"] }
+game-loop = { version = "=1.1.0", features = ["winit"] }
 
