Revert "Remove version dependency between crates of this workspace."
This reverts commit b11c2895df1ecff29a9e97f49425dec06b4d5970.

These version declarations are needed for `cargo publish`, for some
reason.

--- a/easy-imgui-window/Cargo.toml
+++ b/easy-imgui-window/Cargo.toml
@@ -19,9 +19,9 @@ main-window = ["dep:glutin-winit"]
 # docking = ["easy-imgui/docking"]
 
 [dependencies]
-easy-imgui-sys = { path = "../easy-imgui-sys" }
-easy-imgui = { path = "../easy-imgui" }
-easy-imgui-renderer = { path = "../easy-imgui-renderer" }
+easy-imgui-sys = { version = "=0.5.0", path = "../easy-imgui-sys" }
+easy-imgui = { version = "=0.5.0", path = "../easy-imgui" }
+easy-imgui-renderer = { version = "=0.5.0", path = "../easy-imgui-renderer" }
 
 anyhow = "1"
 bitflags = "2"
