Add missing functions for tables. Add few style properties.

--- a/easy-imgui-window/Cargo.toml
+++ b/easy-imgui-window/Cargo.toml
@@ -14,6 +14,7 @@ default = ["clipboard", "main-window"]
 clipboard = ["dep:arboard"]
 freetype = ["easy-imgui/freetype"]
 main-window = ["dep:glutin-winit"]
+docking = ["easy-imgui/docking"]
 
 # This is not really needed except for the examples/demo
 # docking = ["easy-imgui/docking"]
