--- a/easy-imgui-filechooser/Cargo.toml
+++ b/easy-imgui-filechooser/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 easy-imgui = { version = "0.6.0", path = "../easy-imgui" }
-image = { version = "0.25" }
+image = "0.25"
 glob = "0.3"
 time = { version = "0.3", features = ["macros", "formatting"] }
 bitflags = "2"
