--- a/easy-imgui/Cargo.toml
+++ b/easy-imgui/Cargo.toml
@@ -22,5 +22,5 @@ default = []
 freetype = ["easy-imgui-sys/freetype"]
 docking = ["easy-imgui-sys/docking"]
 
-[dev-dependencies]
-easy-imgui-window = { version = "=0.6.0", path = "../easy-imgui-window" }
+#[dev-dependencies]
+#easy-imgui-window = { version = "=0.6.0", path = "../easy-imgui-window" }
