Do not panic on GL context errors.
It looks like some OSes (Windows) can fail at random calls
for the GL context, not sure why.

--- a/easy-imgui-window/Cargo.toml
+++ b/easy-imgui-window/Cargo.toml
@@ -24,6 +24,7 @@ easy-imgui-sys = { version = "=0.6.0", path = "../easy-imgui-sys" }
 easy-imgui = { version = "=0.6.0", path = "../easy-imgui" }
 easy-imgui-renderer = { version = "=0.6.0", path = "../easy-imgui-renderer" }
 
+log ="0.4"
 anyhow = "1"
 bitflags = "2"
 glutin = "0.32"
