--- a/easy-imgui-renderer/Cargo.toml
+++ b/easy-imgui-renderer/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "easy-imgui-renderer"
-version = "0.11.0"
+version = "0.12.0"
 edition = "2021"
 description = "Default renderer for the easy-imgui crate, using OpenGl via glow"
 license = "MIT"
@@ -12,11 +12,11 @@ keywords = ["imgui", "ui", "graphics"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-easy-imgui-sys = { version = "=0.11.0", path = "../easy-imgui-sys" }
-easy-imgui = { version = "=0.11.0", path = "../easy-imgui" }
+easy-imgui-sys = { version = "=0.12.0", path = "../easy-imgui-sys" }
+easy-imgui = { version = "=0.12.0", path = "../easy-imgui" }
+easy-opengl = { version = "0.1", path = "../easy-opengl" }
 
 anyhow = "1"
 cgmath = "0.18"
 smallvec = "1"
-glow = "0.16"
 log = "0.4"
