--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,5 @@ members = [
     "easy-imgui-renderer",
     "easy-imgui-window",
     "easy-imgui-filechooser",
-    "easy-opengl",
+    "easy-imgui-opengl",
 ]
