--- a/easy-imgui-window/Cargo.toml
+++ b/easy-imgui-window/Cargo.toml
@@ -32,6 +32,8 @@ glutin-winit = { version = "0.5", optional = true }
 raw-window-handle = "0.6"
 arboard = { version = "3", optional = true, default-features = false }
 winit = { version = "0.30", features = ["x11", "mint"] }
+futures = "0.3.31"
+send_wrapper = "0.6"
 
 # For the examples
 [dev-dependencies]
@@ -40,4 +42,5 @@ gilrs = "0.11"
 anyhow = "1"
 image = { version = "0.25" }
 game-loop = { version = "=1.3", features = ["winit"] }
+async-std = "1.13.0"
 
