--- a/easy-imgui-window/Cargo.toml
+++ b/easy-imgui-window/Cargo.toml
@@ -43,4 +43,6 @@ anyhow = "1"
 image = { version = "0.25" }
 game-loop = { version = "=1.3", features = ["winit"] }
 async-std = "1.13.0"
+tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
+reqwest = "0.12"
 
