--- a/easy-imgui-window/Cargo.toml
+++ b/easy-imgui-window/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "easy-imgui-window"
-version = "0.14.0"
+version = "0.14.1"
 edition = "2021"
 description = "Default windowing for the easy-imgui crate using winit and easy-imgui-renderer"
 license = "MIT"
@@ -32,7 +32,7 @@ glutin-winit = { version = "0.5", optional = true }
 raw-window-handle = "0.6"
 arboard = { version = "3", optional = true, default-features = false }
 winit = { version = "0.30", features = ["x11", "mint"] }
-futures = "0.3.31"
+futures-util = "0.3.31"
 send_wrapper = "0.6"
 
 # For the examples
@@ -45,4 +45,5 @@ game-loop = { version = "=1.3", features = ["winit"] }
 async-std = "1.13.0"
 tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
 reqwest = "0.12"
+env_logger = "0.11"
 
