--- a/easy-imgui/Cargo.toml
+++ b/easy-imgui/Cargo.toml
@@ -16,6 +16,7 @@ bitflags = "2"
 mint = "0.5"
 cgmath = { version = "0.18", features = ["mint"] }
 image = { version = "0.25", default-features = false }
+log = "0.4"
 
 [features]
 default = []
