--- a/easy-imgui/Cargo.toml
+++ b/easy-imgui/Cargo.toml
@@ -18,7 +18,10 @@ cgmath = { version = "0.18", features = ["mint"] }
 image = { version = "0.25", default-features = false }
 log = "0.4"
 
+send_wrapper = { version = "0.6", optional = true }
+futures-util = { version = "0.3.31", optional = true }
+
 [features]
 default = []
 freetype = ["easy-imgui-sys/freetype"]
-
+future = ["dep:send_wrapper", "dep:futures-util"]
