--- a/easy-imgui/Cargo.toml
+++ b/easy-imgui/Cargo.toml
@@ -20,8 +20,10 @@ log = "0.4"
 
 send_wrapper = { version = "0.6", optional = true }
 futures-util = { version = "0.3.31", optional = true }
+arboard = { version = "3", optional = true, default-features = false }
 
 [features]
 default = []
 freetype = ["easy-imgui-sys/freetype"]
+clipboard = ["dep:arboard"]
 future = ["dep:send_wrapper", "dep:futures-util"]
