--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,10 +16,16 @@ jobs:
           submodules: 'recursive'
       - name: Apt
         run: |
-          sudo apt-get install libudev-dev
+          sudo apt update
+          sudo apt install gnome-desktop-testing libasound2-dev libpulse-dev \
+              libaudio-dev libfribidi-dev libjack-dev libsndio-dev libx11-dev libxext-dev \
+              libxrandr-dev libxcursor-dev libxfixes-dev libxi-dev libxss-dev libxtst-dev \
+              libxkbcommon-dev libdrm-dev libgbm-dev libgl1-mesa-dev libgles2-mesa-dev \
+              libegl1-mesa-dev libdbus-1-dev libibus-1.0-dev libudev-dev \
+              libpipewire-0.3-dev libwayland-dev libdecor-0-dev liburing-dev
       - name: Build examples
         run: |
-          cargo build --examples
+          cargo build --examples --features "sdl3/build-from-source"
 
   Windows:
     runs-on: windows-latest
@@ -29,7 +35,7 @@ jobs:
           submodules: 'recursive'
       - name: Build examples
         run: |
-          cargo build --examples
+          cargo build --examples --features "sdl3/build-from-source"
 
   MacOS:
     runs-on: macos-latest
@@ -39,5 +45,5 @@ jobs:
           submodules: 'recursive'
       - name: Build examples
         run: |
-          cargo build --examples
+          cargo build --examples --features "sdl3/build-from-source"
 
