--- a/easy-imgui-window/Cargo.toml
+++ b/easy-imgui-window/Cargo.toml
@@ -36,7 +36,7 @@ gilrs = "0.11"
 anyhow = "1"
 image = { version = "0.25" }
 game-loop = { version = "=1.3", features = ["winit"] }
-async-std = "1.13.0"
+smol = "2.0.2"
 tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
 reqwest = "0.12"
 env_logger = "0.11"
