--- a/easy-imgui/Cargo.toml
+++ b/easy-imgui/Cargo.toml
@@ -17,6 +17,7 @@ mint = "0.5"
 cgmath = { version = "0.18", features = ["mint"] }
 image = { version = "0.25", default-features = false }
 log = "0.4"
+either = "1.15.0"
 
 send_wrapper = { version = "0.6", optional = true }
 futures-util = { version = "0.3.31", optional = true }
