--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-resolver = "2"
+resolver = "3"
 members = [
     "easy-imgui-sys",
     "easy-imgui",
@@ -9,3 +9,13 @@ members = [
     "easy-imgui-opengl",
     "easy-imgui-sdl3",
 ]
+
+[patch.crates-io]
+easy-imgui-sys = { path = "easy-imgui-sys" }
+easy-imgui = { path = "easy-imgui" }
+easy-imgui-opengl = { path = "easy-imgui-opengl" }
+easy-imgui-renderer = { path = "easy-imgui-renderer" }
+easy-imgui-window = { path = "easy-imgui-window" }
+easy-imgui-filechooser = { path = "easy-imgui-filechooser" }
+easy-imgui-sdl3 = { path = "easy-imgui-sdl3" }
+
