--- a/easy-imgui-filechooser/Cargo.toml
+++ b/easy-imgui-filechooser/Cargo.toml
@@ -14,7 +14,7 @@ default = []
 tr = ["dep:tr", "dep:include-po"]
 
 [dependencies]
-easy-imgui = { version = "0.19", path = "../easy-imgui" }
+easy-imgui = "0.19"
 image = "0.25"
 glob = "0.3"
 time = { version = "0.3", features = ["macros", "formatting"] }
@@ -26,7 +26,7 @@ tr = { version = "0.1.10", default-features = false, optional = true }
 windows = { version = "0.62", features = ["Win32_Storage_FileSystem"] }
 
 [dev-dependencies]
-easy-imgui-window = { version = "0.19", path = "../easy-imgui-window" }
+easy-imgui-window = "0.19"
 sys-locale = "0.3"
 
 [build-dependencies]
