--- a/easy-imgui-renderer/Cargo.toml
+++ b/easy-imgui-renderer/Cargo.toml
@@ -12,9 +12,9 @@ keywords = ["imgui", "ui", "graphics"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-easy-imgui-sys = { version = "=0.19.0", path = "../easy-imgui-sys" }
-easy-imgui = { version = "=0.19.0", path = "../easy-imgui" }
-easy-imgui-opengl = { version = "0.2", path = "../easy-imgui-opengl" }
+easy-imgui-sys = "0.19.0"
+easy-imgui = "0.19.0"
+easy-imgui-opengl = "0.2"
 
 anyhow = "1"
 cgmath = "0.18"
