--- a/easy-imgui-sdl3/Cargo.toml
+++ b/easy-imgui-sdl3/Cargo.toml
@@ -20,13 +20,11 @@ glow = "0.16.0"
 send_wrapper = "0.6.0"
 
 [dependencies.easy-imgui-sys]
-version = "=0.19.0"
+version = "0.19.0"
 features = ["backend-opengl3", "backend-sdl3"]
-path = "../easy-imgui-sys"
 
 [dependencies.easy-imgui]
-version = "=0.19.0"
-path = "../easy-imgui"
+version = "0.19.0"
 features = ["future"]
 
 [build-dependencies]
