--- a/easy-imgui/Cargo.toml
+++ b/easy-imgui/Cargo.toml
@@ -10,7 +10,7 @@ categories = ["gui"]
 keywords = ["imgui", "ui", "graphics"]
 
 [dependencies]
-easy-imgui-sys = { version = "=0.19.0", path = "../easy-imgui-sys" }
+easy-imgui-sys = "0.19.0"
 paste = "1"
 bitflags = "2"
 mint = "0.5"
